# commit-analyzer

./: .gitignore  CITATION.cff  Cargo.toml  LICENSE  README.md
.github/ISSUE_TEMPLATE/: bug_report.md  default.md
.github/workflows/: cffconvert.yml  mirror.yml
src/: author.rs  filter.rs  lib.rs  loc.rs  main.rs  settings.rs  usage.rs
